# clari

./: .gitignore  LICENSE  README.md  colab.ipynb  molab.py  pyproject.toml
clari/: __init__.py  csd.py  geometry.py  paths.py  skill.py
clari/assets/: Elemental_Radii_Alvarez.csv  posebusters_no_strain.yml
clari/chem/: __init__.py  common.py  crystal.py  draw.py  featurize.py
clari/datamodules/: __init__.py  csd.py
clari/evaluation/: __init__.py  build_test_cifs_cache.py  collision.py  compack.py  compute_energies.py  results_utils.py  sample.py  summarize.py
clari/inference/: README.md  SKILL.md  __init__.py  cli.py  core.py  export.py  inputs.py  io.py  rank.py  runner.py  sample.py  sampler.py
clari/models/: __init__.py  dit.py
clari/models/layers/: __init__.py  embedders.py  transformer.py
clari/pipelines/base/: interfaces.py  lit.py  samplers.py  train.py
clari/pipelines/utils/: __init__.py  ema.py  lit.py  metrics.py  muon.py  trainers.py  utils.py
scripts/: link_artifacts.py  test_inference.py
scripts/data/: 0_metadata.py  1_process.py
scripts/inference/: 00_help.sh  01_aspirin_basic.sh  02_aspirin_rank.sh  03_fixed_batch.sh  04_cpu_debug.sh  05_multi_gpu.sh  06_export_all_cifs.sh  07_export_topk.sh  08_export_specific.sh  09_rank_only.sh  10_export_only.sh  sample_config.json
scripts/train/: train_0_no_lat_node.sh  train_1_base.sh  train_2_aux.sh  train_3_self_cond.sh  train_4_prior_normal.sh  train_5_beta_time.sh  train_5_logitnorm_time.sh  train_5_ramp_time.sh  train_6_large.sh  train_7_huge.sh
