[project]
name = "clari"
version = "0.1.0"
description = "Fast Organic Crystal Structure Prediction with Unit Cell Flow Matching"
requires-python = "==3.11.*"
license = "CC-BY-NC-4.0"
license-files = ["LICENSE"]
authors = [
    { name = "Alston Lo", email = "alston@mit.edu" },
    {name = "Luka Mucko", email = "luka.mucko@gmail.com"}, 
    {name = "Austin Cheng", email = "austin.cheng@mail.utoronto.ca"}
]
readme = "clari/inference/README.md"
dependencies = [
    "average-minimum-distance>=1.6.1",
    "ase>=3.28.0",
    "einops",
    "gemmi",
    "jsonargparse",
    "lightning",
    "matplotlib",
    "multiprocess",
    "networkx",
    "numpy",
    "p-tqdm",
    "polars",
    "py3dmol",
    "pymatgen",
    "rdkit>=2025.9.3",
    "scipy",
    "scikit-learn",
    "stopit",
    "torch",
    "torch-geometric",
    "torchmetrics",
    "tqdm",
    "triton",
    "wandb==0.26",
    "ruff>=0.15.5",
    "seaborn>=0.13.2",
    "posebusters>=0.6.5",
    "fairchem-core>=2.19.0",
    "huggingface-hub>=1.14.0",
]

[project.urls]
Repository = "https://github.com/aspuru-guzik-group/clari"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
train = "clari.pipelines.base.train:main"
collision = "clari.evaluation.collision:main"
compute-energies = "clari.evaluation.compute_energies:cli"
sample-test = "clari.evaluation.sample:cli"
sample = "clari.inference.cli:main"
rank = "clari.inference.rank:main"
export-cifs = "clari.inference.export:main"
summarize = "clari.evaluation.summarize:main"
skill = "clari.skill:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]
ignore = [
    "E741", # ambiguous variable name
    "E722", # bare except
    "E402", # import not at top of file
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
